--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -7673,12 +7673,14 @@ table.preprocessing-test-results {
 	.interface-row {
 		display: grid;
 		grid-template-columns: 26px 36px 225px 175px 85px 100px 20px 1fr;
-		grid-template-rows: 25px 1fr;
+		grid-template-rows: 24px 1fr;
 		gap: 5px;
-		padding-top: 10px;
 
 		&.interface-row-header {
 			margin: 0;
+		}
+		&:not(.interface-row-header) {
+			padding-top: 10px;
 		}
 
 		&[data-type] .interface-cell-details {
